--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A lightning fast starter for autonomous AI agent development",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only -r dotenv/config src/index.ts",
+    "dev": "tsx --no-warnings -r dotenv/config index.ts",
     "build": "tsc",
     "start": "node -r dotenv/config dist/index.js",
     "lint": "eslint . --ext .ts",
@@ -32,7 +32,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
-    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.3",
     "typescript": "^5.3.3"
   }
 }
